--- a/CPlusPlusGrundKurs/CPlusPlusFundamentals.Chapter7/CPlusPlusFundamentals.Chapter7.vcxproj
+++ b/CPlusPlusGrundKurs/CPlusPlusFundamentals.Chapter7/CPlusPlusFundamentals.Chapter7.vcxproj
@@ -20,11 +20,10 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{E82D7129-8D09-44E6-AA26-BEE67BCECCEF}</ProjectGuid>
+    <ProjectGuid>{CBB2F99E-756E-4C61-A3DC-EFFF5609A90B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>ConsoleApplication1</RootNamespace>
+    <RootNamespace>CPlusPlusFundamentalsChapter7</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>CPlusGrundKurs.Chapter01Bis05</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -148,19 +147,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="chapter04.cpp" />
-    <ClCompile Include="ConsoleApplication1.cpp" />
-    <ClCompile Include="Drawer.cpp" />
-    <ClCompile Include="Entity.cpp" />
-    <ClCompile Include="Rectangle.cpp" />
-    <ClCompile Include="Triangle.cpp" />
+    <ClCompile Include="ChapterSamples.cpp" />
+    <ClCompile Include="CPlusPlusFundamentals.Chapter7.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="chapter04.h" />
-    <ClInclude Include="Drawer.h" />
-    <ClInclude Include="Entity.h" />
-    <ClInclude Include="Rectangle.h" />
-    <ClInclude Include="Triangle.h" />
+    <ClInclude Include="ChapterSamples.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
