--- a/Modern-C++-From-Packtpub/Basis/KE11_References/KE11_References.vcxproj
+++ b/Modern-C++-From-Packtpub/Basis/KE11_References/KE11_References.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f67ae672-aad2-47ee-b374-5a423657accd}</ProjectGuid>
-    <RootNamespace>BasisCpp</RootNamespace>
+    <ProjectGuid>{fa4e965e-600c-4c7d-b9b4-dbb05a99f1f6}</ProjectGuid>
+    <RootNamespace>KE11References</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,11 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BasisCpp.cpp" />
-    <ClCompile Include="Source.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="source.h" />
+    <ClCompile Include="KE11_References.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
