--- a/Modern-Cpp-for-Beginners/src/Part05/Part05.vcxproj.filters
+++ b/Modern-Cpp-for-Beginners/src/Part05/Part05.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="AnotherClass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MyClass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="myheader.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AnotherClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MyClass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
