--- a/Modern-Cpp-for-Beginners/src/Part07/Part07.vcxproj
+++ b/Modern-Cpp-for-Beginners/src/Part07/Part07.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{dd2209c2-fb8e-41d6-9941-36a1056799b8}</ProjectGuid>
-    <RootNamespace>ThirdModuleApp</RootNamespace>
+    <ProjectGuid>{1de753ed-d005-4041-809f-082de277f1e4}</ProjectGuid>
+    <RootNamespace>Part07</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Part03</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -117,7 +116,6 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -141,17 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="MyClass.cpp" />
-    <ClCompile Include="MyNewClass.cpp" />
-    <ClCompile Include="Person.cpp" />
-    <ClCompile Include="Student.cpp" />
-    <ClCompile Include="MainApp.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="MyClass.h" />
-    <ClInclude Include="MyNewClass.h" />
-    <ClInclude Include="Person.h" />
-    <ClInclude Include="Student.h" />
+    <ClCompile Include="Part07.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
